show gridiron detail from searh page

--- a/web/src/app/page-error/page-error.component.html
+++ b/web/src/app/page-error/page-error.component.html
@@ -1,3 +1,4 @@
 <div class="err-page">
-  <a href="/">Dường dẫn không tồn tại! Quay về trang chủ</a>
+  <a href="/" style="color: white; font-weight: bold; font-size: 50px; margin-top: 3rem">Can not file url. Back to
+    home</a>
 </div>
