fix bug create new notification

--- a/web/src/app/user/gridiron/gridiron-detail/gridiron-detail.component.html
+++ b/web/src/app/user/gridiron/gridiron-detail/gridiron-detail.component.html
@@ -106,7 +106,7 @@
   <!-- Quan li san con -->
   <div class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title">Manage sub gridiron</h1>
+      <h1 class="modal-title">Sub gridiron</h1>
     </div>
     <div *ngIf="!view" [ngClass]="{'view': view}" class="modal-body">
       <form role="form" [formGroup]="formAddSubGri" (ngSubmit)="addSubGri()">
@@ -175,7 +175,7 @@
   <!-- quan li gia thue san -->
   <div class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title">Manage price</h1>
+      <h1 class="modal-title">Price by the time</h1>
     </div>
     <div *ngIf="!view" [ngClass]="{'view': view}" class="modal-body">
       <form role="form" [formGroup]="formPriceOnime" (ngSubmit)="addPriceOnTime()">
