--- a/web/src/app/user/profile/profile.component.html
+++ b/web/src/app/user/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="modal-content">
     <div class="modal-header">
-      <h1 class="modal-title">Update information</h1>
+      <h1 class="modal-title">Account information</h1>
     </div>
     <div class="modal-body">
       <div class="row col-md-12">
