up report, phieu duyet, phieu reuirement, nhan xet

--- a/web/src/app/shared/components/core/header/header.component.html
+++ b/web/src/app/shared/components/core/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light header-position">
-  <a class="navbar-brand" href="#"><img src="../../../../../assets/images/logoo.png" alt=""> </a>
+  <a class="navbar-brand" (click)="navi('home')"><img src="../../../../../assets/images/logoo.png" alt=""> </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -19,7 +19,7 @@
             &nbsp;{{item.message}}... <span style="color: red">New</span> </a>
           <div *ngIf="listNotify.length > 0" class="dropdown-divider"></div>
           <!-- </div> -->
-          <a class="dropdown-item" href="/notify"><i class="fas fa-bell"></i> &nbsp;See full notify</a>
+          <a class="dropdown-item" (click)="navi('notify')"><i class="fas fa-bell"></i> &nbsp;See full notify</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -28,11 +28,14 @@
           <i class="fas fa-futbol"></i>&nbsp;SEARCH..
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="home"><i class="fas fa-futbol"></i> &nbsp;SEARCH MATCH..</a>
+          <!-- <a class="dropdown-item" href="home"><i class="fas fa-futbol"></i> &nbsp;SEARCH MATCH..</a> -->
+          <a class="dropdown-item" (click)="navi('home')"><i class="fas fa-futbol"></i> &nbsp;SEARCH MATCH..</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="home-gridiron"><i class="fas fa-futbol"></i> &nbsp;SEARCH GRIDIRON..</a>
+          <a class="dropdown-item" (click)="navi('home-gridiron')"><i class="fas fa-futbol"></i> &nbsp;SEARCH
+            GRIDIRON..</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="home-league"><i class="fas fa-futbol"></i> &nbsp;SEARCH LEAGUES..</a>
+          <a class="dropdown-item" (click)="navi('home-league')"><i class="fas fa-futbol"></i> &nbsp;SEARCH
+            LEAGUES..</a>
         </div>
       </li>
       <li class="nav-item dropdown" *ngIf="isShow">
@@ -41,13 +44,13 @@
           <i class="fas fa-futbol"></i>&nbsp;MANAGE
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="team"><i class="fas fa-futbol"></i> &nbsp;MANAGE TEAMS</a>
+          <a class="dropdown-item" (click)="navi('team')"><i class="fas fa-futbol"></i> &nbsp;MANAGE TEAMS</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="gridiron"><i class="fas fa-futbol"></i> &nbsp;MANAGE GRIDIRONS</a>
+          <a class="dropdown-item" (click)="navi('gridiron')"><i class="fas fa-futbol"></i> &nbsp;MANAGE GRIDIRONS</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="match"><i class="fas fa-futbol"></i> &nbsp;MANAGE MATCHES</a>
+          <a class="dropdown-item" (click)="navi('match')"><i class="fas fa-futbol"></i> &nbsp;MANAGE MATCHES</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="manage-league"><i class="fas fa-futbol"></i> &nbsp;MANAGE LEAGUE</a>
+          <a class="dropdown-item" (click)="navi('manage-league')"><i class="fas fa-futbol"></i> &nbsp;MANAGE LEAGUE</a>
         </div>
       </li>
       <li class="nav-item dropdown" *ngIf="isAdmin">
@@ -56,11 +59,11 @@
           <i class="fas fa-futbol"></i>&nbsp;ADMIN MANAGE
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="area"><i class="fas fa-futbol"></i> &nbsp;AREAS</a>
+          <a class="dropdown-item" (click)="navi('area')"><i class="fas fa-futbol"></i> &nbsp;AREAS</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="level"><i class="fas fa-futbol"></i> &nbsp;LEVELS</a>
+          <a class="dropdown-item" (click)="navi('level')"><i class="fas fa-futbol"></i> &nbsp;LEVELS</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="career"><i class="fas fa-futbol"></i> &nbsp;CAREER</a>
+          <a class="dropdown-item" (click)="navi('career')"><i class="fas fa-futbol"></i> &nbsp;CAREER</a>
         </div>
       </li>
       <li *ngIf="!isShow" class="nav-item cursor-li">
@@ -72,7 +75,7 @@
           <i class="fas fa-user"></i>&nbsp;ACCOUNT
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="profile"><i class="fas fa-user"></i> &nbsp;ACCOUNT</a>
+          <a class="dropdown-item" (click)="navi('profile')"><i class="fas fa-user"></i> &nbsp;ACCOUNT</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item cursor-li" (click)="logout()"><i class="fas fa-user"></i> &nbsp;SIGN OUT</a>
         </div>
