--- a/web/src/app/user/league/manage-league/manage-league.component.html
+++ b/web/src/app/user/league/manage-league/manage-league.component.html
@@ -44,7 +44,7 @@
                   <label class="control-label">Registry Expiry Date</label>
                   <span class="required"> *</span>
                   <div class="input-include-error">
-                    <input type="date" min="{{startDate}}" class="form-control input-lg" name=""
+                    <input type="date"  class="form-control input-lg" name=""
                       formControlName="date_expiry_register">
                     <span
                       *ngIf="formAdd.controls.date_expiry_register.hasError('required')&&(formAdd.controls['date_expiry_register'].touched || errorForm)">Field
